--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:cardview-v7:22.1.1'
     compile 'com.android.support:recyclerview-v7:22.1.1'
@@ -30,6 +30,7 @@ dependencies {
     compile files('libs/universal-image-loader-1.9.2.jar')
     compile files('libs/eventbus-3.0.0.jar')
     compile files('libs/picasso-2.5.2.jar')
+    compile files('libs/photoview.jar')
 }
 
 dependencies {
