--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Fri Mar 11 16:59:20 CST 2016
-
+#Thu Apr 14 18:49:13 CST 2016
+systemProp.http.proxyHost=109.131.7.11
+systemProp.http.proxyPort=8080
